--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,8 +1,21 @@
 body {
-  padding: 50px;
+  margin: 0;
+  padding: 0;
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
+}
+
+#map {
+  height: 500px;
+  width: 700px;
 }
 
 a {
   color: #00B7FF;
+}
+
+@media only screen and (max-width: 680px) {
+  #map {
+    height: 300px;
+    width: 500px;
+  }
 }
